force-app/main/default/objects/Invoice_Custom__c/fields/date_of_invoice__c.field-meta.xml
<CustomField>
    <fullName>date_of_invoice__c</fullName>
    <label>date of invoice</label>
    <type>Date</type>
</CustomField>