force-app/main/default/objects/Invoice_Custom__c/fields/date_of_payment__c.field-meta.xml
<CustomField>
    <fullName>date_of_payment__c</fullName>
    <label>date of payment</label>
    <type>Date</type>
</CustomField>