force-app/main/default/objects/Invoice_Custom__c/fields/Gross_Price_Sum__c.field-meta.xml
<CustomField>
    <fullName>Gross_Price_Sum__c</fullName>
    <label>Gross_Price_Sum</label>
    <summarizedField>Invoice_Line__c.Gross_Price__c</summarizedField>
    <summaryForeignKey>Invoice_Line__c.Invoice_Custom__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>