force-app/main/default/objects/Invoice_Custom__c/fields/method_of_payment__c.field-meta.xml
<CustomField>
    <fullName>method_of_payment__c</fullName>
    <label>method of payment</label>
    <length>200</length>
    <type>Text</type>
</CustomField>