force-app/main/default/objects/Invoice_Custom__c/fields/Net_Price_Sum__c.field-meta.xml
<CustomField>
    <fullName>Net_Price_Sum__c</fullName>
    <label>Net Price Sum</label>
    <summarizedField>Invoice_Line__c.Net_Price__c</summarizedField>
    <summaryForeignKey>Invoice_Line__c.Invoice_Custom__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>