force-app/main/default/objects/Invoice_Custom__c/fields/sale_date__c.field-meta.xml
<CustomField>
    <fullName>sale_date__c</fullName>
    <label>sale date</label>
    <type>Date</type>
</CustomField>