force-app/main/default/objects/Invoice_Custom__c/fields/Whole_Number__c.field-meta.xml
<CustomField>
    <fullName>Whole_Number__c</fullName>
    <label>Whole Number</label>
    <length>200</length>
    <type>Text</type>
</CustomField>